# libbamboo

./: CMakeLists.txt  README.md  build.sh  run-tests.sh
include/: bamboo.h
src/: allocator.c  array.c  bamboo-private.h  list.c  string.c
tests/: CMakeLists.txt  run-allocator.c  run-array.c  run-bamboo.c  run-list.c  run-string.c  run-tests.sh
